add example to work with collection

--- a/src/components/nav-bar/nav-bar.html
+++ b/src/components/nav-bar/nav-bar.html
@@ -29,6 +29,10 @@
           <a href="#discount">Discount Widget</a>
         </li>
 		
+		<li data-bind="css: { active: route().page === 'sports-list' }">
+          <a href="#sports-list">Sport List</a>
+        </li>
+		
 		<li data-bind="css: { active: route().page === 'about-page' }">
           <a href="#about">About</a>
         </li>
